Agrego segunda versión del código de limpieza LIGIE

--- a/scripts/Limpieza LIGIE v1_20251203.ipynb
+++ b/scripts/Limpieza LIGIE v1_20251203.ipynb
@@ -672,6 +672,20 @@
     "else:\n",
     "    print(\"No se encontraron datos para exportar. Verifica el archivo PDF.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce0fa9cd",
+   "metadata": {},
+   "source": [
+    "Vamos a hacer modificaciones a este markdown, el objetivo principal es definir las funciones entre la fase 0 y la fase 1, debido a que actualmente tenemos una gran cantidad de definición de funciones dentro de una otra definición de función, la función principal se mantendrá a como está ahora definida, sin embargo, las funciones auxiliares deben empezar con un \"_\" para reconocerlas como tal, las funciones finales mantienen nombres normales, aquellas funciones, que no puedan o deban ser modificadas o rompería el código, deben empezar y terminar con \"__\".\n",
+    "\n",
+    "En resumen:\n",
+    "1. Debemos hacer una sección entre la Fase 0 y Fase 1, en la que INDIVIDUALMENTE definamos y expliquemos cada función.\n",
+    "2. Si son funciones claves o no modificables, usamos \"__\" al inicio y al final del nombre de la función.\n",
+    "3. Si son funciones auxiliares, usamos \"_\" al inicio.\n",
+    "4. Si son funciones finales dejamos el nombre normal."
+   ]
   }
  ],
  "metadata": {
