Modificaciones y códigos nuevos

--- a/scripts/HTS_Limpieza_v1_20251204.ipynb
+++ b/scripts/HTS_Limpieza_v1_20251204.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "code_config_hts",
    "metadata": {},
    "outputs": [
@@ -92,19 +92,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "code_defs_hts",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- FUNCIONES AUXILIARES ---\n",
     "\n",
-    "def _normalizar_texto(texto):\n",
-    "    \"\"\"Capitaliza (Oración) y agrega punto final si falta.\"\"\"\n",
+    "def _normalizar_texto(texto, usar_punto=True): # <--- Cambio aquí\n",
+    "    \"\"\"Capitaliza (Oración) y agrega punto final opcionalmente.\"\"\"\n",
     "    t = str(texto).strip()\n",
     "    if not t or t.lower() == 'nan': return \"\"\n",
     "    t = t[0].upper() + t[1:].lower()\n",
-    "    if not t.endswith('.'):\n",
+    "    \n",
+    "    # Solo agrega punto si usar_punto es True\n",
+    "    if usar_punto and not t.endswith('.'): \n",
     "        t += \".\"\n",
     "    return t\n",
     "\n",
@@ -359,9 +361,15 @@
     "    p['Fraccion_Num'] = p['Codigo_Limpio'].str[6:8]\n",
     "    \n",
     "    # Normalización de Texto (Capitalize + Puntos)\n",
-    "    cols_txt = ['Seccion_Nombre', 'Capitulo_Nom', 'Partida_Nom', 'Desdoblamiento_Nom', 'Subpartida_Nom', 'Description']\n",
-    "    for col in cols_txt:\n",
-    "        p[col] = p[col].apply(_normalizar_texto)\n",
+    "    # 1. Grupo que SI lleva punto final\n",
+    "    cols_con_punto = ['Seccion_Nombre', 'Capitulo_Nom', 'Description']\n",
+    "    for col in cols_con_punto:\n",
+    "        p[col] = p[col].apply(lambda x: _normalizar_texto(x, usar_punto=True))\n",
+    "\n",
+    "    # 2. Grupo que NO lleva punto final (Heading, Breakdown, Subheading)\n",
+    "    cols_sin_punto = ['Partida_Nom', 'Desdoblamiento_Nom', 'Subpartida_Nom']\n",
+    "    for col in cols_sin_punto:\n",
+    "        p[col] = p[col].apply(lambda x: _normalizar_texto(x, usar_punto=False))\n",
     "        \n",
     "    # Concatenación\n",
     "    p['Concatenated_Desc'] = p.apply(_concatenar_descripciones, axis=1)\n",
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "code_fase1_hts",
    "metadata": {},
    "outputs": [
@@ -388,7 +396,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> [CRÍTICO] Leyendo estructura desde PDF...\n",
+      ">> [CRÍTICO] Leyendo estructura desde PDF...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       ">> Construyendo diccionarios maestros...\n",
       "   Referencias cargadas: 99 capítulos detectados.\n"
      ]
@@ -412,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "code_fase2_hts",
    "metadata": {},
    "outputs": [
@@ -441,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "code_fase3_hts",
    "metadata": {},
    "outputs": [
@@ -494,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "code_fase4_hts",
    "metadata": {},
    "outputs": [
